Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanText.quorum
boolean bool = cast(boolean, "text")