Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjText.quorum
Integer i = cast(Integer, "text")